css update to fix textarea overlap in chrome

--- a/Game/assets/css/sliding-blocks.css
+++ b/Game/assets/css/sliding-blocks.css
@@ -25,6 +25,10 @@ body {
     height:420px;
 }
 
+textarea {
+    width:195px;
+}
+
 #cr-stage {
     font-size:12px;
     position:absolute:
